--- a/AUTOLYCUS.ipynb
+++ b/AUTOLYCUS.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "AUTOLYCUS.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNhmFuKMcWiaDPoDismUvp0",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "TPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/CrazyCoder009/AUTOLYCUS/blob/master/AUTOLYCUS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,8 +13,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "k2iDzwB9QeGW",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "k2iDzwB9QeGW"
       },
       "source": [
         "#Welcome to **AUTOLYCUS** \n",
@@ -42,12 +26,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "qJtAcvAlOdfK",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "qJtAcvAlOdfK"
       },
+      "outputs": [],
       "source": [
+        "#adding corrections as suggested by SnazzyCoder (apologies for the late implementation)\n",
+        "!python -m pip install --upgrade pip setuptools wheel\n",
+        "!python -m pip install lbry-libtorrent\n",
+        "\n",
         "#Run the program by clicking the left run button. <nOObs>\n",
         "\n",
         "!apt install python3-libtorrent\n",
@@ -131,19 +121,33 @@
         "\n",
         "#RRN\n",
         "#GitHub.com/CrazyCoder009\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qpcZ_U8iQner",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "qpcZ_U8iQner"
       },
       "source": [
         "**Disclaimer**: I'm not responsible for any damages or activities related to mis-management of this code or program. Hence use at your own risk. I've made this only for Research purposes."
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "authorship_tag": "ABX9TyNhmFuKMcWiaDPoDismUvp0",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "AUTOLYCUS.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
